src/style-guide.less
/* ... */
p{
  margin-bottom:20px;
  font-size: @m_fs_body;
  line-height: @m_lh_body;

  @media only screen and (min-width:@bp_md){
    font-size: @fs_body;
    line-height: @lh_body;
  }
}

.ols-label-lg{
  font-size: @m_fs_h2;
  line-height: @m_lh_h2;

  @media only screen and (min-width:@bp_md){
    font-size: @fs_h2;
    line-height: @lh_h2;
  }
}

.ols-label-md{
  font-size: @m_fs_h4;
  line-height: @m_lh_h4;

  @media only screen and (min-width:@bp_md){
    font-size: @fs_h4;
    line-height: @lh_h4;
  }
}

.ols-labels-sm{
  font-size: @m_fs_body + 1;
  line-height: @m_lh_body + 2;

  @media only screen and (min-width:@bp_md){
    font-size: @fs_body + 1;
    line-height: @lh_body + 2;
  }
}

.ols-label-xs{
  font-size: @m_fs_small;
  line-height: @m_lh_small;

  @media only screen and (min-width:@bp_md){
    font-size: @fs_small;
    line-height: @lh_small;
  }
}

[class*='ols-label-']{
  .col(@col_text);
  font-family:@ff_light;
}

/*
 * Layout and scaffolding
 *
 */
.container-fluid, .row-fluid{
  .clearfix();
}

.container-height-xs {
  display:table;
  padding-left:0px;
  padding-right:0px;
}

.row-height-xs{
  display:table-row;
}

.col-height-xs{
  display:table-cell;
  float:none;
}

@media only screen and (min-width: @bp_sm) {
  .container-height-sm {
    display:table;
    padding-left:0px;
    padding-right:0px;
  }

  .row-height-sm {
    display:table-row;
  }

  .col-height-sm {
    display:table-cell;
    float:none;
  }
}

@media only screen and (min-width: @bp_md) {
  .container-height-md {
    display:table;
    padding-left:0px;
    padding-right:0px;
  }

  .row-height-md {
    display:table-row;
  }

  .col-height-md {
    display:table-cell;
    float:none;
  }
}

@media only screen and (min-width: @bp_lg) {
  .container-height-lg {
    display:table;
    padding-left:0px;
    padding-right:0px;
  }

  .row-height-lg {
    display:table-row;
  }

  .col-height-lg {
    display:table-cell;
    float:none;
  }
}

.height-top{
  [class*='col-height-']{
    vertical-align: top;
  }
}

.height-bottom{
    [class*='col-height-']{
    vertical-align: bottom;
  }
}

.height-center{
  [class*='col-height-']{
    vertical-align: center;
  }
}

.ols-aside-contact{
  .col(#323232, b);

  header{
    a{//contains all elements
      padding: 10px 15px 15px 15px;
      margin-bottom:20px;
      border-bottom: @bst @col_gray_7;
      .clearfix();
      .inline-block();
      .stretch();
      .col(#545454, b);
      .fl();
      .animate(@animation_time_short, @transition_default);

      &:hover{
        .col(@col_gray_5, b);
        .animate(@animation_time_short, @transition_default);

        [class*="ols-image-inbox-message"]{
          //from 0 83.82492863939106%;
          background-position: 0 88.524929%;

          .animate(@animation_time_short, @transition_default);
        }

        [class*="ols-label"]{
          .col(@col_gray_8);
          .animate(@animation_time_short, @transition_default);
        }
      }

      @media only screen and (min-width:@bp_sm){
        padding: 20px 30px 30px 30px;
      }

      [class*="ols-image-inbox-message"]{
        .animate(@animation_time_short, @transition_default);
      }

      [class*="ols-label"]{
        .col(@ws);
        .animate(@animation_time_short, @transition_default);
      }
    }

    h5.ols-label-sm{
      .rel();
      top:10px;
    }

    .ols-svg{
      .rel();
      transform: scale(1.1);
      top: 15px;
      .fr();
      margin-right:10px;

      @media only screen and (min-width:@bp_sm){
        top: 20px;
        margin-right:0;
        .fl();
      }
    }

    //just for ref, was deleted
    .round-image{
      img{
        @media only screen and (min-width:@bp_xl){
          max-width: 130px;
        }
      }

      figcaption{
        margin-left: 15px;

        @media only screen and (min-width:@bp_xl){
          margin-top: 20px;
        }
      }
    }
  }

  .contact-body{
    padding: 10px 15px 20px 15px;
    margin-bottom: 20px;

    @media only screen and (min-width:@bp_md){
      padding: 20px 30px 40px 30px;
    }

    dt{
      margin-top:20px;
    }

    dd{
      .col(@col_gray_4);
    }
  }
}

.ols-aside-edit-map{
  .col-xs-24{
    height: 100%;

    .company-map{
      height:100%;
    }
  }
}

.ols-map-edit-input{
  .abs();
  margin: 30px @map_edit_input_margin;
  padding: 20px 15px 10px 15px;
  z-index: 1;
  .col(@w, b);
  width: ~'calc(100% - @{map_edit_input_margin}*2)';
}

.ols-profile-header{
  margin: 0 0 40px -10px;
  padding-left:10px;
  border-left:@bstm @col_base_3;

  .ols-label-lg{
    margin-bottom: 0;
  }
}

.ols-profile-header.image-header{
  .rel();
  padding-left: 75px;
  border-left:0;
  margin-left: -75px;

  &:before{
    content: '';
    .inline-block();
    .abs();
    border-right: @bstm @col_base_3;
    .stretch(h);
    margin-left: -12px;
  }

  img{
    .abs();
    padding-top:4px;
    left:0;
    width:45px;
  }
}

.ols-aside-right, .ols-aside-left{
  .stretch(h);

  @media only screen and (min-width:@bp_sm){
    .abs();
  }
}

.ols-aside-right{
  right: 0;
}

.ols-aside-left{
  left:0;
}

.sidebar-fixed{
  top: 0;
  overflow: auto;

  @media only screen and (min-width:@bp_sm){
    .fix();
  }
}
/* ... */

